<resources>
    <!-- Nombre de la aplicación -->
    <string name="app_name">RestaurantApp</string>

    <!-- Títulos y encabezados -->
    <string name="title_restaurant">Restaurante Chileno</string>

    <!-- Nombres de los platillos -->
    <string name="platillo_pastel_choclo">Pastel de Choclo</string>
    <string name="platillo_cazuela">Cazuela</string>

    <!-- Precios de los platillos -->
    <string name="precio_pastel_choclo">$12.000</string>
    <string name="precio_cazuela">$10.000</string>

    <!-- Etiquetas -->
    <string name="hint_cantidad">Cant.</string>
    <string name="subtotal">Subtotal:</string>

    <!-- Propina y totales -->
    <string name="switch_propina">¿Incluir propina?</string>
    <string name="total_sin_propina">Total sin propina:</string>
    <string name="propina">Propina:</string>
    <string name="total_con_propina">Total con propina:</string>

    <string name="restaurante_chileno">Restaurante Chileno</string>
    <string name="logo">logo</string>
    <string name="platillo1">platillo1</string>
    <string name="tsp_p_tcp">Total sin propina: $0\nPropina: $0\nTotal con propina: $0</string>
    <string name="subtotal_0">Subtotal: $0</string>
    <string name="_12_000">$12.000</string>
    <string name="platillo2">platillo2</string>
    <string name="cazuela">Cazuela</string>
    <string name="_10_000">$10.000</string>
    <string name="pastel_de_choclo">Pastel de Choclo</string>
    <string name="cant">Cant.</string>
</resources>
