<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurante_chileno"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <ImageView
        android:id="@+id/ivPlatillo1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/platillo1"
        android:src="@drawable/pastel_choclo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvTotales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tsp_p_tcp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchPropina" />

    <EditText
        android:id="@+id/etCantidadPlatillo2"
        android:layout_width="36dp"
        android:layout_height="35dp"
        android:layout_marginStart="9dp"
        android:inputType="number"
        android:maxLength="3"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tvPrecioPlatillo2" />

    <TextView
        android:id="@+id/tvSubtotalPlatillo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/subtotal_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivPlatillo1"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Switch
        android:id="@+id/switchPropina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="¿Incluir propina?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubtotalPlatillo2" />

    <TextView
        android:id="@+id/tvPrecioPlatillo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/_12_000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivPlatillo1"
        app:layout_constraintTop_toBottomOf="@+id/tvPlatillo1" />

    <TextView
        android:id="@+id/tvSubtotalPlatillo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/subtotal_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivPlatillo2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/etCantidadPlatillo1"
        android:layout_width="36dp"
        android:layout_height="35dp"
        android:layout_marginStart="9dp"
        android:inputType="number"
        android:maxLength="3"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/tvPrecioPlatillo1" />

    <ImageView
        android:id="@+id/ivPlatillo2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/platillo2"
        android:src="@drawable/cazuela"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPlatillo1" />

    <TextView
        android:id="@+id/tvPlatillo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:text="@string/cazuela"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivPlatillo2"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtotalPlatillo1" />

    <TextView
        android:id="@+id/tvPrecioPlatillo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/_10_000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivPlatillo2"
        app:layout_constraintTop_toBottomOf="@+id/tvPlatillo2" />

    <TextView
        android:id="@+id/tvPlatillo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="31dp"
        android:text="@string/pastel_de_choclo"
        app:layout_constraintStart_toEndOf="@+id/ivPlatillo1"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/cant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivPlatillo1"
        app:layout_constraintTop_toBottomOf="@+id/tvPrecioPlatillo1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/cant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivPlatillo2"
        app:layout_constraintTop_toBottomOf="@+id/tvPrecioPlatillo2" />


</androidx.constraintlayout.widget.ConstraintLayout>
